// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Media placeholder accepts custom styles 1`] = `
.c0 {
  background: #A5A5A5;
  border-radius: 5px;
  display: block;
  width: 100%;
  padding: 100% 0 0 0;
  background: salmon;
}

<mark
  className="c0 custom-placeholder"
  size="100%"
/>
`;

exports[`The Media placeholder should render 1`] = `
.c0 {
  background: #A5A5A5;
  border-radius: 5px;
  display: block;
  width: 100%;
  padding: 100% 0 0 0;
}

<mark
  className="c0 custom-placeholder"
  size="100%"
/>
`;

exports[`The Media placeholder should render a custom size 1`] = `
.c0 {
  background: #A5A5A5;
  border-radius: 5px;
  display: block;
  width: 50%;
  padding: 50% 0 0 0;
}

<mark
  className="c0 custom-placeholder"
  size="50%"
/>
`;

exports[`The Media placeholder should render children when isLoading = false 1`] = `"Rendered child"`;

exports[`The Media placeholder should render showLoadingAnimation 1`] = `
.c0 {
  background: #A5A5A5;
  border-radius: 5px;
  display: block;
  width: 100%;
  padding: 100% 0 0 0;
}

<mark
  className="c0 show-loading-animation custom-placeholder"
  size="100%"
/>
`;
